compiling_error.txt
/home/kevin/Documents/Programming Fun/arabic.cpp: In function ‘int main()’:
/home/kevin/Documents/Programming Fun/arabic.cpp:24:28: error: ‘numeric_limits’ was not declared in this scope
                 cin.ignore(numeric_limits<streamsize>::max(), '\n');
                            ^~~~~~~~~~~~~~
/home/kevin/Documents/Programming Fun/arabic.cpp:24:53: error: expected primary-expression before ‘>’ token
                 cin.ignore(numeric_limits<streamsize>::max(), '\n');
                                                     ^
/home/kevin/Documents/Programming Fun/arabic.cpp:24:60: error: no matching function for call to ‘max()’
                 cin.ignore(numeric_limits<streamsize>::max(), '\n');
                                                            ^
In file included from /usr/include/c++/6/bits/char_traits.h:39:0,
                 from /usr/include/c++/6/ios:40,
                 from /usr/include/c++/6/ostream:38,
                 from /usr/include/c++/6/iostream:39,
                 from /home/kevin/Documents/Programming Fun/arabic.cpp:1:
/usr/include/c++/6/bits/stl_algobase.h:219:5: note: candidate: template<class _Tp> constexpr const _Tp& std::max(const _Tp&, const _Tp&)
     max(const _Tp& __a, const _Tp& __b)
     ^~~
/usr/include/c++/6/bits/stl_algobase.h:219:5: note:   template argument deduction/substitution failed:
/home/kevin/Documents/Programming Fun/arabic.cpp:24:60: note:   candidate expects 2 arguments, 0 provided
                 cin.ignore(numeric_limits<streamsize>::max(), '\n');
                                                            ^
In file included from /usr/include/c++/6/bits/char_traits.h:39:0,
                 from /usr/include/c++/6/ios:40,
                 from /usr/include/c++/6/ostream:38,
                 from /usr/include/c++/6/iostream:39,
                 from /home/kevin/Documents/Programming Fun/arabic.cpp:1:
/usr/include/c++/6/bits/stl_algobase.h:265:5: note: candidate: template<class _Tp, class _Compare> constexpr const _Tp& std::max(const _Tp&, const _Tp&, _Compare)
     max(const _Tp& __a, const _Tp& __b, _Compare __comp)
     ^~~
/usr/include/c++/6/bits/stl_algobase.h:265:5: note:   template argument deduction/substitution failed:
/home/kevin/Documents/Programming Fun/arabic.cpp:24:60: note:   candidate expects 3 arguments, 0 provided
                 cin.ignore(numeric_limits<streamsize>::max(), '\n');
                                                            ^
/home/kevin/Documents/Programming Fun/arabic.cpp:42:50: error: ‘convert’ was not declared in this scope
         answers[0] = convert(thous, "M", "M", "M");
                                                  ^
